# SPC20

./: .env.example  .gitignore  DEPLOYMENT_STEPS.md  FIELD_ALPHA_READINESS.md  README.md  pyproject.toml
docs/: asana_import.csv  asana_plan.md  bench_test_plan.md  build1_phase_gates.md  calibration_workflow.md  component_transfer_plan.md  field_install_checklist.md  grounding_and_isolation_checklist.md  heuristics.md  local_ap_fallback.md  local_tech_dashboard.md  phase_gate_signoff.md  pi_field_hardening.md  power_cycle_test_plan.md  purchase_list.md  system_overview.md  trial_plan.md  wiring_diagram.md  yard_trial_plan.md
docs/decisions/: ADR-001-build1-scope-lock.md
scripts/: db_integrity_check.py  install_service.sh  preflight_storage_check.sh  run_simulator.py  setup_local_ap_notes.md  setup_spc20_data_dir.sh
src/: config.py  heuristics.py  ingest_client.py  local_buffer.py  logger.py  sensors.py
src/spc20/: __init__.py  aggregation.py  buffer.py  calibration.py  config.py  health.py  heuristics.py  quality.py  scaling.py  uploader.py
src/spc20/adapters/: __init__.py  base.py  sequent.py  simulator.py
src/spc20/services/: logger_service.py
src/spc20/web/: app.py  auth.py
supabase/functions/spc20-ingest/: index.ts
supabase/migrations/: 20260716000001_spc20_initial.sql  20260716000002_spc20_hardening.sql
systemd/: spc20-logger.service  spc20-network-watchdog.service  spc20-web.service
tests/: test_aggregation.py  test_buffer.py  test_calibration.py  test_heuristics.py  test_quality.py  test_scaling.py  test_web.py
(+1 files in other folders)
