[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spc20-logger"
version = "0.1.0"
description = "SPC 2.0 — Smart Pool Circulation read-only logger"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
sequent = ["smbus2>=0.4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
